--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "facturae_reader_example",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "facturaereader": "^1.0.3",
     "vue": "^3.5.10"
   },
   "devDependencies": {
